<resources>
    <string name="app_name">iCalorie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_subtitle">Counting your steps</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello ...!!!</string>
    <string name="slide_1_desc">Saat melakukan aktivitas fisik yang berat seperti workout atau berolahraga, tubuh Toppers akan kehilangan banyak nutrisi dan energi. Oleh karena itu, sudah seharusnya Toppers mengkonsumsi makanan tertentu sebagai pengganti energi yang terbakar saat berolahraga. Namun Toppers juga harus jeli dalam memilih makanan untuk dikonsumsi, karena jika salah dalam memilih makanan, tubuh kita akan kesulitan untuk mengembalikan kembali energi yang hilang.
Oleh karena itu, sebaiknya Toppers mengetahui terlebih dahulu makanan-makanan apa saja yang sangat tidak dianjurkan untuk dikonsumsi setelah berolahraga. Simak yuk.</string>

    <string name="slide_2_title">Makanan ringan dengan rasa asin</string>
    <string name="slide_2_desc">Makanan ringan dengan rasa asin yang gurih memang disukai oleh semua kalangan. Namun tahukah Toppers, ternyata makanan tersebut dapat mengganggu pola diet dan olahraga yang kamu lakukan lho. Makanan asin memang dapat menambah potasium dalam tubuh yang banyak hilang melalui keringat yang kita keluarkan saat berolahraga. Namun perlu diingat bahwa sebagian besar dari makanan ringan tinggi akan kalori yang membuat konsumsi kalori kamu dalam sehari lebih besar dari yang diperlukan. Inilah yang akan membuat olahraga yang kamu lakukan akan menjadi sia-sia belaka. Nah sebagai pengganti potasium yang hilang setelah berolahraga, sebaiknya konsumsi buah pisang yang telah terbukti mengandung banyak potasium sebagai pengganti potasium yang banyak dikeluarkan oleh tubuh saat berolahraga.</string>

    <string name="slide_3_title">Cokelat batang</string>
    <string name="slide_3_desc">Selain enak, cokelat juga memiliki banyak manfaat bagi tubuh kita, beberapa diantaranya yaitu  memperbaiki mood, mencegah berkembangnya sel kanker dengan kandungan antioksidannya, serta membunuh radikal bebas. Namun makanan dengan rasa manis ini sangat tidak dianjurkan untuk dikonsumsi setelah berolahraga, karena kandungan kalorinya yang tinggi dan hanya akan membuat olahraga yang akan kamu lakukan sia-sia saja. Jika tidak bisa lepas dari makanan yang satu ini, kamu bisa mengkonsumsinya sebelum berolahraga, agar kalori dari coklat yang masuk ke dalam tubuh kamu bisa langsung terbakar saat berolahraga. Atau jika tetap ingin mengkonsumsi cokelat setelah berolahraga, konsumsilah dengan cara yang lain, seperti dengan membuat segelas coklat hangat atau coklat susu dengan menggunakan coklat bubuk yang kandungan lemak dan kalorinya lebih rendah.</string>

    <string name="slide_4_title">Minuman manis dan bersoda</string>
    <string name="slide_4_desc">Mengkonsumsi minuman manis dan bersoda hanya akan menggagalkan impian kamu untuk mendapatkan bentuk tubuh yang ideal. Hal tersebut karena selain tinggi akan kalori, soda dan makanan manis juga dapat memperlambat proses metabolisme tubuh, yang artinya proses pembakaran lemak pun akan terhambat pula. Selain itu, minuman bersoda juga dapat berakibat buruk bagi kesehatan kita jika dikonsumsi secara terus-menerus dalam jangka waktu yang panjang. Jika merasa haus setelah melakukan olahraga yang tentunya banyak menguras tenaga, sebaiknya konsumsi air putih, jus buah, dan teh tanpa tambahan gula. Minuman-minuman tersebut tentunya juga akan menghilangkan rasa haus yang kamu rasakan tanpa harus memberikan kalori berlebih bagi tubuh kamu.</string>
    <string name="started">Pedometer started.</string>
    <string name="stopped">Pedometer stopped.</string>

    <string name="steps">steps</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>
    <string name="steps_per_minute">steps / minute</string>
    <string name="kilometers_per_hour">km / hour</string>
    <string name="miles_per_hour">mph</string>
    <string name="calories_burned">calories burned</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>

    <string name="desired_pace">Desired pace:</string>
    <string name="desired_speed">Desired speed:</string>

    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="activity_settings">Pedometer Settings</string>
    <string name="steps_settings_title">Basic Settings</string>
    <string name="sensitivity_setting">Sensitivity</string>
    <string name="sensitivity_setting_details">Calibrate the step detector</string>
    <string name="sensitivity_setting_title">Select sensitivity level</string>
    <string name="extra_high">extra high</string>
    <string name="very_high">very high</string>
    <string name="high">high</string>
    <string name="higher">higher</string>
    <string name="medium">medium</string>
    <string name="lower">lower</string>
    <string name="low">low</string>
    <string name="very_low">very low</string>
    <string name="extra_low">extra low</string>
    <string name="operation_level_setting">Operational level</string>
    <string name="operation_level_setting_details">Some OS versions prevent using sensors when the screen is off; set the level that works for you</string>
    <string name="operation_level_setting_title">Select operational level</string>
    <string name="run_in_background">Normal (just try running in background)</string>
    <string name="keep_screen_on">Screen on (keep screen dim)</string>
    <string name="wake_up">Aggressive (wake up when I turn screen off)</string>
    <string name="units_setting">Units</string>
    <string name="units_setting_details">Imperial or metric units</string>
    <string name="units_setting_title">Choose your units</string>
    <string name="units_metric">metric (kilometers)</string>
    <string name="units_imperial">imperial (miles)</string>
    <string name="step_length_setting">Step length</string>
    <string name="step_length_setting_details">For distance, speed &amp; calorie calculation</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="body_weight_setting">Body weight</string>
    <string name="body_weight_setting_details">For calorie calculation</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">Exercise type</string>
    <string name="exercise_type_setting_details">For calorie calculation</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="exercise_type_bicycling">bicycling</string>
    <string name="maintain_setting">Maintain pace/speed</string>
    <string name="maintain_setting_details">Maintaining a desired a pace/speed</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">Helps you maintain your desired pace or speed (interval doesn\'t apply)</string>
    <string name="incorrect_step_length">Incorrect step length format! Go to the Settings to change it!</string>

    <string name="quit">Quit</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
